--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>Hasta Takip Sistemi</title>
 
     <!-- Bootstrap -->
     <link href="src/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,6 +26,7 @@
     <script src="src/libraries/tabs.jquery.js"></script>
     <script src="src/formBuilder.jquery.js"></script>
     <link rel="stylesheet" href="src/css/style.css">
+
     <!-- Custom Theme Style -->
     <link href="src/build/css/custom.min.css" rel="stylesheet">
   </head>
@@ -36,19 +37,16 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+              <a href="index.html" class="site_title"><img src="src/img/logo.png" alt="logo" height="50" width="40"> <span>Hasta Takip Sistemi</span></a>
             </div>
 
             <div class="clearfix"></div>
 
             <!-- menu profile quick info -->
             <div class="profile clearfix">
-              <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
-              </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Hoşgeldiniz,</span>
+                <h2>{{currentUserName}}</h2>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -61,11 +59,11 @@
               <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                  <li><a><i class="fa fa-home"></i> Anasayfa</a></li>
-                  <li><a><i class="fa fa-edit"></i> Yeni Form Şablonu Oluştur</a></li>
-                  <li><a><i class="fa fa-edit"></i> Yeni Hasta Oluştur</a></li>
-                  <li><a><i class="fa fa-edit"></i> Yeni Kayıt Oluştur</a></li>
-                  <li><a><i class="fa fa-edit"></i> Hastalarda Gelişmiş Arama Yap</a></li>
+                  <li><a href="/index"><i class="fa fa-home"></i> Anasayfa</a></li>
+                  <li><a href="/createform"><i class="fa fa-edit"></i> Yeni Form Şablonu Oluştur</a></li>
+                  <li><a href="/createpatient"><i class="fa fa-edit"></i> Yeni Hasta Oluştur</a></li>
+                  <li><a href="/insertrecord"><i class="fa fa-edit"></i> Yeni Kayıt Oluştur</a></li>
+                  <li><a href="/detailedsearch"><i class="fa fa-edit"></i> Hastalarda Gelişmiş Arama Yap</a></li>
                 </ul>
               </div>
             </div>
@@ -83,85 +81,32 @@
 
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
-                  <a href="javascript:;" class="user-profile" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">John Doe
-                    <span class=" fa fa-angle-down"></span>
+                  <a href="/profile" class="user-profile">
+                    {{currentUserName}}
                   </a>
                 </li>
                 <li class="">
-                  <a data-toggle="tooltip" data-placement="top" title="Çıkış">
+                  <a href="/logout" data-toggle="tooltip" data-placement="top" title="Çıkış" name="submit">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
                 </a>
                 </li>
                 <li class="">
-                  <a data-toggle="tooltip" data-placement="top" title="Ayarlar">
+                  <a href="settings" data-toggle="tooltip" data-placement="top" title="Ayarlar">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                   </a>
                 </li>
                 <li class="">
-                  <a data-toggle="tooltip" data-placement="top" title="Yardim">
+                  <a href="/contact" data-toggle="tooltip" data-placement="top" title="Yardim">
                 <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
                   </a>
                 </li>
-
               </ul>
             </nav>
           </div>
         </div>
         <!-- /top navigation -->
+        {% block helper %} {% endblock %}
 
-        <!-- page content -->
-        <div class="right_col" role="main">
-          <div class="">
-            <div class="page-title">
-              <div class="title_left">
-                <h3>Plain Page</h3>
-              </div>
-
-              <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="clearfix"></div>
-
-            <div class="row">
-              <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                  <div class="x_title">
-                    <h2>Plain Page</h2>
-                    <ul class="nav navbar-right panel_toolbox">
-                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Settings 1</a>
-                          </li>
-                          <li><a href="#">Settings 2</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li><a class="close-link"><i class="fa fa-close"></i></a>
-                      </li>
-                    </ul>
-                    <div class="clearfix"></div>
-                  </div>
-                  <div class="x_content">
-                  {% block content %} {% endblock %}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
         <!-- /page content -->
 
         <!-- footer content -->
@@ -174,9 +119,88 @@
         <!-- /footer content -->
       </div>
     </div>
+    <!-- Datatables -->
+    <script>
+      $(document).ready(function() {
+        var handleDataTableButtons = function() {
+          if ($("#datatable-buttons").length) {
+            $("#datatable-buttons").DataTable({
+              dom: "Bfrtip",
+              buttons: [
+                {
+                  extend: "copy",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "csv",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "excel",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "pdfHtml5",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "print",
+                  className: "btn-sm"
+                },
+              ],
+              responsive: true
+            });
+          }
+        };
 
-    <!-- jQuery -->
-    <script src="src/vendors/jquery/dist/jquery.min.js"></script>
+        TableManageButtons = function() {
+          "use strict";
+          return {
+            init: function() {
+              handleDataTableButtons();
+            }
+          };
+        }();
+
+        $('#datatable').dataTable();
+
+        $('#datatable-keytable').DataTable({
+          keys: true
+        });
+
+        $('#datatable-responsive').DataTable();
+
+        $('#datatable-scroller').DataTable({
+          ajax: "js/datatables/json/scroller-demo.json",
+          deferRender: true,
+          scrollY: 380,
+          scrollCollapse: true,
+          scroller: true
+        });
+
+        $('#datatable-fixed-header').DataTable({
+          fixedHeader: true
+        });
+
+        var $datatable = $('#datatable-checkbox');
+
+        $datatable.dataTable({
+          'order': [[ 1, 'asc' ]],
+          'columnDefs': [
+            { orderable: false, targets: [0] }
+          ]
+        });
+        $datatable.on('draw.dt', function() {
+          $('input').iCheck({
+            checkboxClass: 'icheckbox_flat-green'
+          });
+        });
+
+        TableManageButtons.init();
+      });
+    </script>
+
+<script src="src/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
     <script src="src/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
@@ -186,5 +210,20 @@
 
     <!-- Custom Theme Scripts -->
     <script src="src/build/js/custom.min.js"></script>
+
+  <script src="src/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="src/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="src/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
+    <script src="src/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+    <script src="src/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="src/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
+    <script src="src/vendors/jszip/dist/jszip.min.js"></script>
+    <script src="src/vendors/pdfmake/build/pdfmake.min.js"></script>
+    <script src="src/vendors/pdfmake/build/vfs_fonts.js"></script>
   </body>
 </html>
