--- a/app/templates/adminbase.html
+++ b/app/templates/adminbase.html
@@ -7,21 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
-
-    <!-- Bootstrap -->
+    <title>Hasta Takip Sistemi</title>
+     <!--imports from base  html-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="src/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+    <script src="src/libraries/dust-js/dust-core-0.3.0.min.js"></script>
+    <script src="src/libraries/dust-js/dust-full-0.3.0.min.js"></script>
+    <script src="src/libraries/dust-js/dust-helpers.js"></script>
+    <script src="src/libraries/tabs.jquery.js"></script>
+    <script src="src/formBuilder.jquery.js"></script>
+    <link rel="stylesheet" href="src/css/style.css">
     <link href="src/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
     <link href="src/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!-- NProgress -->
     <link href="src/vendors/nprogress/nprogress.css" rel="stylesheet">
-    <!-- Custom Theme Style -->
     <link href="src/build/css/custom.min.css" rel="stylesheet">
     <link href="src/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
     <link href="src/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
     <link href="src/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
     <link href="src/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
     <link href="src/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
+    <script src="src/vendors/iCheck/icheck.min.js"></script>
+
+    <!-- NProgress -->
+
+    <!-- iCheck -->
+    <!-- Datatables -->
+
   </head>
 
   <body class="nav-md">
@@ -30,19 +44,16 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+              <a href="index.html" class="site_title"><img src="src/img/logo.png" alt="logo" height="50" width="40"> <font size="3">Hasta Takip Sistemi</font></a>
             </div>
 
             <div class="clearfix"></div>
 
             <!-- menu profile quick info -->
             <div class="profile clearfix">
-              <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
-              </div>
               <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Hoşgeldiniz,</span>
+                <h2>   {{currentUserName}}</h2>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -79,9 +90,8 @@
 
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
-                  <a href="/profile" class="user-profile" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">John Doe
-                    <span class=" fa fa-angle-down"></span>
+                  <a href="/profile" class="user-profile">
+                    {{currentUserName}}
                   </a>
                 </li>
                 <li class="">
@@ -95,8 +105,8 @@
                   </a>
                 </li>
                 <li class="">
-                  <a href="/help" data-toggle="tooltip" data-placement="top" title="Yardim">
-                <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+                  <a href="/inbox" data-toggle="tooltip" data-placement="top" title="Yardim">
+                <span class="glyphicon glyphicon-inbox" aria-hidden="true"></span>
                   </a>
                 </li>
 
@@ -108,72 +118,101 @@
 
 
 
-        <!-- page content -->
-         {% block content %} {% endblock %}
-        <!--<div class="right_col" role="main">-->
-          <!--<div class="">-->
-            <!--<div class="page-title">-->
-              <!--<div class="title_left">-->
-                <!--<h3>Plain Page</h3>-->
-              <!--</div>-->
-
-              <!--<div class="title_right">-->
-                <!--<div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">-->
-                  <!--<div class="input-group">-->
-                    <!--<input type="text" class="form-control" placeholder="Search for...">-->
-                    <!--<span class="input-group-btn">-->
-                      <!--<button class="btn btn-default" type="button">Go!</button>-->
-                    <!--</span>-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="clearfix"></div>-->
-            <!---->
-            <!--<div class="row">-->
-              <!--<div class="col-md-12 col-sm-12 col-xs-12">-->
-                <!--<div class="x_panel">-->
-                  <!--<div class="x_title">-->
-                    <!--<h2>Plain Page</h2>-->
-                    <!--<ul class="nav navbar-right panel_toolbox">-->
-                      <!--<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>-->
-                      <!--</li>-->
-                      <!--<li class="dropdown">-->
-                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>-->
-                        <!--<ul class="dropdown-menu" role="menu">-->
-                          <!--<li><a href="#">Settings 1</a>-->
-                          <!--</li>-->
-                          <!--<li><a href="#">Settings 2</a>-->
-                          <!--</li>-->
-                        <!--</ul>-->
-                      <!--</li>-->
-                      <!--<li><a class="close-link"><i class="fa fa-close"></i></a>-->
-                      <!--</li>-->
-                    <!--</ul>-->
-                    <!--<div class="clearfix"></div>-->
-                  <!--</div>-->
-                  <!--<div class="x_content">-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
+         {% block helper %} {% endblock %}
         <!-- /page content -->
 
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Made By Alper Fırat Kaya and Batuhan Coşkun with Flask and Bootstrap <a href="https://colorlib.com">Colorlib</a>
+            Made By Alper Fırat Kaya and Batuhan Coşkun with Flask and Bootstrap
           </div>
           <div class="clearfix"></div>
         </footer>
         <!-- /footer content -->
       </div>
     </div>
+  <!-- Datatables -->
+    <script>
+      $(document).ready(function() {
+        var handleDataTableButtons = function() {
+          if ($("#datatable-buttons").length) {
+            $("#datatable-buttons").DataTable({
+              dom: "Bfrtip",
+              buttons: [
+                {
+                  extend: "copy",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "csv",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "excel",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "pdfHtml5",
+                  className: "btn-sm"
+                },
+                {
+                  extend: "print",
+                  className: "btn-sm"
+                },
+              ],
+              responsive: true
+            });
+          }
+        };
 
-    <!-- jQuery -->
+        TableManageButtons = function() {
+          "use strict";
+          return {
+            init: function() {
+              handleDataTableButtons();
+            }
+          };
+        }();
+
+        $('#datatable').dataTable();
+
+        $('#datatable-keytable').DataTable({
+          keys: true
+        });
+
+        $('#datatable-responsive').DataTable();
+
+        $('#datatable-scroller').DataTable({
+          ajax: "js/datatables/json/scroller-demo.json",
+          deferRender: true,
+          scrollY: 380,
+          scrollCollapse: true,
+          scroller: true
+        });
+
+        $('#datatable-fixed-header').DataTable({
+          fixedHeader: true
+        });
+
+        var $datatable = $('#datatable-checkbox');
+
+        $datatable.dataTable({
+          'order': [[ 1, 'asc' ]],
+          'columnDefs': [
+            { orderable: false, targets: [0] }
+          ]
+        });
+        $datatable.on('draw.dt', function() {
+          $('input').iCheck({
+            checkboxClass: 'icheckbox_flat-green'
+          });
+        });
+
+        TableManageButtons.init();
+      });
+    </script>
+    <!-- /Datatables -->
+      <!-- jQuery -->
     <script src="src/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
     <script src="src/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -184,5 +223,20 @@
 
     <!-- Custom Theme Scripts -->
     <script src="src/build/js/custom.min.js"></script>
+
+  <script src="src/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="src/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="src/vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="src/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
+    <script src="src/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+    <script src="src/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="src/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
+    <script src="src/vendors/jszip/dist/jszip.min.js"></script>
+    <script src="src/vendors/pdfmake/build/pdfmake.min.js"></script>
+    <script src="src/vendors/pdfmake/build/vfs_fonts.js"></script>
   </body>
 </html>
