--- a/app/templates/approveform.html
+++ b/app/templates/approveform.html
@@ -1,23 +1,12 @@
 {%extends "adminbase.html"%}
-{% block content %}
+{% block helper %}
 
         <!-- page content -->
         <div class="right_col" role="main">
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Users <small>Some examples to get you started</small></h3>
-              </div>
-
-              <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
-                </div>
+                <h3>Onay Bekleyen Form Şablonları</small></h3>
               </div>
             </div>
 
@@ -26,29 +15,16 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Button Example <small>Users</small></h2>
-                    <ul class="nav navbar-right panel_toolbox">
-                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Settings 1</a>
-                          </li>
-                          <li><a href="#">Settings 2</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li><a class="close-link"><i class="fa fa-close"></i></a>
-                      </li>
-                    </ul>
+                    <h2>Form Kayıtlar</h2>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
                     <p class="text-muted font-13 m-b-30">
-                      The Buttons extension for DataTables provides a common set of options, API methods and styling to display buttons on a page that will interact with a DataTable. The core library provides the based framework upon which plug-ins can built.
+                      Onay Bekleyen Formlar Aşağida gosterilmiştir Onaylamak istekleriniz için <strong>Onayla</strong>
+                      Reddetmek istedikleriniz için <strong>Reddet</strong>
+                      Formu gormek için <strong>Onizleme</strong> tuşlarını kullanınız
                     </p>
-                    <table id="datatable-buttons" class="table table-striped table-bordered">
+                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                       <thead>
                         <tr>
                           <th>Formun Başlığı</th>
@@ -59,8 +35,6 @@
                           <th>Reddet</th>
                         </tr>
                       </thead>
-
-
                       <tbody>
                         {%for form in forms%}
                         <tr>
@@ -68,9 +42,9 @@
                           <td>{{form.description}}</td>
                           <td>{{form.creator}}</td>
                           <form action="" method="post" name="login" class="login-form">
-                          <td><button class="btn" id="onizleme" name="onizleme" type="submit" value={{form.title}}>Onayla</button></td>
-                          <td><button class="btn" id="onayla" name="onayla" type="submit" value={{form.title}}>Onayla</button></td>
-                          <td><button class="btn" id="reddet" name="reddet" type="submit" value={{form.title}}>Reddet</button></td>
+                          <td><button class="btn" id="onizleme" name="onizleme" type="submit" value="{{form.title}}" >Önizleme</button></td>
+                          <td><button class="btn" id="onayla" name="onayla" type="submit" value="{{form.title}}" >Onayla</button></td>
+                          <td><button class="btn" id="reddet" name="reddet" type="submit" value="{{form.title}}" >Reddet</button></td>
                           </form>
                         </tr>
                         {% endfor %}
@@ -81,19 +55,4 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- /page content -->
-
-        <!-- footer content -->
-        <footer>
-          <div class="pull-right">
-            Created By Alper Fırat Kaya and Batuhan Coşkun using Flask and Bootstrap <a href="https://colorlib.com">Colorlib</a>
-          </div>
-          <div class="clearfix"></div>
-        </footer>
-        <!-- /footer content -->
-      </div>
-    </div>
-
-
 {% endblock %}
