--- a/app/templates/createpatient.html
+++ b/app/templates/createpatient.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%if admin%}
+{%extends "adminhelper.html"%}
+{%else%}
+{%extends "helper.html"%}
+{%endif%}
+{% block content %}
+{%if error%}
+<p>
+    {{error}}
+</p>
+{%endif%}
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+            <div class="form-box">
+                        		<div class="form-top">
+	                        		<div class="form-top-left">
+	                        			<h3>Hasta Kayıt</h3>
+	                        		</div>
+	                        		<div class="form-top-right">
+	                        			<i class="fa fa-pencil"></i>
+	                        		</div>
+	                            </div>
+	                            <div class="form-bottom">
+                                <form action="" method="post" name="login" class="login-form">
+                                     {{ form.hidden_tag() }}
+                                        <div class="form-group">
+                                            {% for message in form.email.errors %}
+                                                 <h4 style="color:#bc2f2f">{{message}}</h4>
+                                            {% endfor %}
+                                            {{form.email(placeholder="Hastanin Email Adresini",class_="form-username form-control")}}
+                                        </div>
+                                        <div class="form-group">
+                                            {% for message in form.fullname.errors %}
+                                            <h4 style="color:#bc2f2f">{{message}}</h4>
+                                            {% endfor %}
+                                            {{form.fullname(placeholder="Hastanın adını ve Soyadını giriniz",class_="form-username form-control")}}
+                                        </div>
+                                        <div class="form-group">
+                                            {% for message in form.tckimlikno.errors %}
+                                            <h4 style="color:#bc2f2f">{{message}}</h4>
+                                            {% endfor %}
+                                            {{form.tckimlikno(placeholder="Hastanın Tc Kimlik Numarasi",class_="form-username form-control")}}
+                                        </div>
+                                        <div class="form-group">
+                                            {% for message in form.phone.errors %}
+                                            <h4 style="color:#bc2f2f">{{message}}</h4>
+                                            {% endfor %}
+                                            {{form.phone(placeholder="Hastanın Telefon numarasi",class_="form-username form-control")}}
+                                        </div>
+                                        <div class="form-group">
+                                            {% for message in form.birthday.errors %}
+                                            <h4 style="color:#bc2f2f">{{message}}</h4>
+                                            {% endfor %}
+                                            {{form.birthday(placeholder="Hastanın Dogum Tarihi",class_="form-control")}}
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn" name="submit" type="submit" value="Hasta Kaydet">Hasta Kaydet</button>
+                                        </div>
+                                </form>
+                                </div>
+                        	</div>
 
-</body>
-</html>
+                        </div>
+                    </div>
+{% endblock %}
