--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,3 @@
-
-{%extends "base.html"%}
+{%extends "helper.html"%}
 {% block content %}
-<div>
-<button><a href="/createform">Create Form Template</a></button>
-<button><a href="/insertrecord">Create New Form For Patient</a></button>
-
-    <div>
-        {%for form in forms %}
-         <div>{{form.title}} </div>
-        {% endfor %}
-    </div>
-</div>
 {% endblock %}
