--- a/app/templates/insertrecord.html
+++ b/app/templates/insertrecord.html
@@ -1,10 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%if admin%}
+{%extends "adminbase.html"%}
+{%else%}
+{%extends "base.html"%}
+{%endif%}
+{% block helper %}
+<!-- page content -->
+        <div class="right_col" role="main">
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h3>Yeni Kayıt Oluşturun</h3>
+              </div>
+            </div>
 
-</body>
-</html>
+            <div class="clearfix"></div>
+
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <h2>Form Şablonları</h2>
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+                    <p class="text-muted font-13 m-b-30">
+                      Hastayı kaydetmek isteğiniz form şablonuna geçerli bir tckimlikno girip Kaydet tuşuna basınız
+                    </p>
+                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>Formun Başlığı</th>
+                          <th>Formun Açıklaması</th>
+                          <th>Formun Yaraticisi(Allah)</th>
+                          <th>Seç</th>
+                        </tr>
+                      </thead>
+                      {%if error%}
+                      <h3>{{error}}</h3>
+                      {% endif %}
+                      <tbody>
+                        {%for form in forms%}
+                        <tr>
+                          <td>{{form.title}}</td>
+                          <td>{{form.description}}</td>
+                          <td>{{form.creator}}</td>
+                          <form action="" method="post" name="login" class="login-form">
+                            <td>
+                              <input type="text" id="tckimlik"  name="tckimlik"  placeholder="Hasta Tc No">
+                              <button class="btn" id="onayla" name="onayla" type="submit" value="{{form.title}}" >Kaydet</button>
+                            </td>
+                          </form>
+                        </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+{%endblock%}
