--- a/app/templates/landingPage.html
+++ b/app/templates/landingPage.html
@@ -88,7 +88,7 @@
                                             <button class="btn" id="submit" name="submit" type="submit" value="Giriş Yap">Giriş Yap</button>
                                         </div>
                                         <div class="form-group">
-                                                <button formaction="/register" class="btn" id="register" name="register">Kayıt Ol</button>
+                                                <button formaction="/register" formmethod="get" class="btn" id="register" name="register">Kayıt Ol</button>
                                         </div>
                                         <div class="form-group">
                                             <button formaction="/forgatpassword" class="btn" id="şifremiunuttum" name="şifremiunuttum">Şifremi Unuttum</button>
