--- a/app/templates/patientdetails.html
+++ b/app/templates/patientdetails.html
@@ -8,13 +8,12 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Hasta Formu</small></h3>
+                <h3>Hasta Raporu</small></h3>
               </div>
             </div>
-			  {% if patient %}
             <div class="container">
-				<!-- Hasta -->
-              <div class="col-md-6 col-xs-9">
+              <!-- Hasta -->
+              <div class="col-md-4 col-xs-6">
                 <div class="x_panel">
                   <div class="x_title">
                     <h2>Hasta Bilgileri</h2>
@@ -28,7 +27,6 @@
                   <p>Doğum Tarihi: :{{patient.birthday}}</p>
                   </div>
               </div>
-				{% endif %}
 
 
             </div>
@@ -38,50 +36,46 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Button Example <small>Users</small></h2>
+                    <h2>{{patient.fullname}} kişisine ait kayıtlar</h2>
+                    </ul>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
-                    <p class="text-muted font-13 m-b-30">
-                      The Buttons extension for DataTables provides a common set of options, API methods and styling to display buttons on a page that will interact with a DataTable. The core library provides the based framework upon which plug-ins can built.
-                    </p>
-					  {%if patientsdata%}
                     <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                       <thead>
                         <tr>
                           <th>Muayne Eden Doktor</th>
+                          <th>Doktor Iletişim</th>
+                          <th>Tedavi Gorduğu Hastahane</th>
                           <th>Form Başlıği</th>
                           <th>Form Açıklaması</th>
 						  <th>Form Oluşturulma Tarihi</th>
-						  <th>Detaylı Gör</th>
+						  <th>Form Bilgileri</th>
+
                         </tr>
                       </thead>
                       <tbody>
                         {% for data in patientsdata %}
                             <tr>
                               <td>{{data.doctor.fullname}}</td>
+                              <td>{{data.doctor.email}}</td>
+                              <td>{{data.doctor.hospital}}</td>
                               <td>{{data.form_template.title}}</td>
                               <td>{{data.form_template.description}}</td>
-                              <td>{{data.form_template.registertime}}</td>
-                              <form action="" method="post">
-                              <td><button class="btn btn-info" id="detayligor" name="detayligor" type="submit" value="{{data.id}}">detayligor</button></td>
-                              </form>
+                              <td>simdilik boş</td>
+                              <td>
+                                <form action="" method="post">
+                                    <button class="btn btn-info" id="Detay" name="Detay" type="submit" value="{{data.id}}">Detay</button>
+                                </form>
+                              </td>
+
                             </tr>
                         {% endfor %}
                       </tbody>
                     </table>
-					  {% endif %}
-					  <div class="container">
-						<div class="col-sm-6 col-sm-offset-3">
-							{{ render_form|safe}}
-						</div>
-					  </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        <!-- /page content -->
 {% endblock %}
-
-
